# TemplateVM

./: .gitignore  Makefile  README.md  meson.build
source/: Command.h  Interpret.h  Interpreter.h  Module.h  Output.h  State.h  TemplateVM.h  Value.h  main.cpp
